# modl

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  E2E_GPU_TEST_PLAN.md  README.md  build.rs  install.sh  models.toml
.github/workflows/: release.yml
docker/: Dockerfile.gpu  entrypoint-gpu.sh
docs/: PLAN.md  cloud-lora-plan.md  execution-target-interface.md  multi-arch-training-plan.md  runtime-profile-spec.md
docs/cloud/: capability-model.md  plan.md
docs/future/: runtime-architecture.md
docs/guides/: workflows.md
docs/specs/: aitoolkit-mapping.md  jobs-schema-v1.md  persistent-worker.md  runtime-profiles.md  ui-architecture.md  worker-protocol.md
python/modl_worker/: device.py  main.py  protocol.py  serve.py
python/modl_worker/adapters/: __init__.py  arch_config.py  caption_adapter.py  compare_adapter.py  compose_adapter.py  config_builder.py  controlnet.py  describe_adapter.py  edit_adapter.py  face_restore_adapter.py  gen_adapter.py  ground_adapter.py  lora_utils.py  output_scanner.py  pipeline_loader.py  preprocess_adapter.py  registry.py  remove_bg_adapter.py  resize_adapter.py  score_adapter.py  segment_adapter.py  tag_adapter.py  train_adapter.py  upscale_adapter.py  vl_common.py  vl_tag_adapter.py
python/modl_worker/adapters/lanpaint_adapters/: base.py  flux_klein.py  z_image.py
python/modl_worker/configs/chroma-scheduler/: scheduler_config.json
python/modl_worker/configs/qwen-image-edit-scheduler/: scheduler_config.json
python/modl_worker/configs/zimage-turbo-scheduler/: scheduler_config.json
python/mods_worker/: main.py  protocol.py
python/mods_worker/adapters/: __init__.py  arch_config.py  config_builder.py  output_scanner.py  resize_adapter.py  tag_adapter.py  train_adapter.py
python/tests/: test_serve_vram.py
scripts/: build-guide-grids.py  klein4b-r32.sh  maxi-final-round.sh  maxi-showcase.sh  overnight-maxi-klein.sh  overnight-maxi-round2.sh  overnight-maxi-round3.sh  overnight-maxi-train.sh
skills/modl/: SKILL.md
src/auth/: mod.rs
src/cli/: auth.rs  compose.rs  config.rs  datasets.rs  describe.rs  doctor.rs  edit.rs  export.rs  export_import.rs  generate.rs  gpu.rs  ground.rs  import.rs  info.rs  init.rs  install.rs  link.rs  list.rs  mod.rs  outputs.rs  popular.rs  push.rs  run.rs  runtime.rs  search.rs  train.rs  train_setup.rs  train_status.rs  uninstall.rs  update.rs  upgrade.rs  vl_tag.rs
src/compat/: layouts.rs  mod.rs
src/core/: artifacts.rs  backup.rs  cloud.rs  config.rs  dataset.rs  db.rs  download.rs  executor.rs  gpu.rs  gpu_session.rs  huggingface.rs  install.rs  job.rs  manifest.rs  mod.rs  model_family.rs  model_resolve.rs  preflight.rs  presets.rs  registry.rs  remote_executor.rs  resolver.rs  runtime.rs  store.rs  symlink.rs  training.rs  training_status.rs  update_check.rs  workflow.rs
src/core/db/: jobs.rs  mod.rs
src/ui/: index.html  server.rs
src/ui/routes/: datasets.rs  files.rs  generate.rs  studio.rs  training.rs
tests/: cli_smoke.rs
