[package]
name = "modl"
version = "0.2.11"
edition = "2024"
description = "CLI model manager for the AI image generation ecosystem"
license = "AGPL-3.0-only"
repository = "https://github.com/modl/modl"
homepage = "https://github.com/modl/modl"
readme = "README.md"
keywords = ["ai", "models", "comfyui", "stable-diffusion", "flux"]
categories = ["command-line-utilities"]

[[bin]]
name = "modl"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Terminal UX
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
comfy-table = "7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"

# HTTP + async
reqwest = { version = "0.12", features = ["stream", "rustls-tls-native-roots", "json", "blocking"], default-features = false }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Hashing
sha2 = "0.10"

# Archive extraction (for self-update)
flate2 = "1"
tar = "0.4"
zstd = "0.13"
zip = { version = "2", default-features = false, features = ["deflate"] }

# GPU detection
nvml-wrapper = "0.10"

# Platform dirs
dirs = "6"

# Error handling
anyhow = "1"
thiserror = "2"

# Web UI (training preview)
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
open = "5"

# Image processing (thumbnails)
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

# Embedded assets
include_dir = "0.7"

# Misc
chrono = { version = "0.4", features = ["serde"] }
shellexpand = "3"
urlencoding = "2"

# UUID generation (studio sessions)
uuid = { version = "1", features = ["v4"] }

# Temp files (backup export/import)
tempfile = "3"

# Unix process management (worker daemon)
libc = "0.2"

# LLM runtime (behind feature flag — heavy compile)
llama-cpp-2 = { version = "0.1", optional = true }
walkdir = "2.5.0"

[features]
default = []
llm = ["llama-cpp-2"]

[dev-dependencies]
tempfile = "3"
mockito = "1"
assert_cmd = "2"
predicates = "3"
